--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "wifiOnIce",
+  "name": "NYCollision",
   "version": "1.0.0",
-  "description": "web-based visualization for Deutsche Bahn wifi dataset",
+  "description": "web-based visualization showing vehicle collisions in NYC",
   "main": "webpack.dev.js",
   "scripts": {
     "build": "webpack --config webpack.dev.js",
     "watch": "webpack --config webpack.dev.js --watch",
+    "start": "webpack-dev-server --config webpack.dev.js --open",
+    "server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "d3": "^5.4.0",
+    "express": "^4.16.3",
     "leaflet": "^1.3.1",
+    "npm": "^6.1.0",
+    "pg-promise": "^8.4.4",
     "source-map-loader": "^0.2.3",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
@@ -24,17 +29,19 @@
     "npm-update-all": "^1.0.1",
     "popper.js": "^1.14.3",
     "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0"
+    "style-loader": "^0.21.0",
+    "webpack-dev-server": "^3.1.4",
+    "write-file-webpack-plugin": "^4.3.2"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bmblby/wifiOnIce.git"
+    "url": "git+https://github.com/glncstgl/NYCollision.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bmblby/wifiOnIce/issues"
+    "url": "https://github.com/glncstgl/NYCollision/issues"
   },
-  "homepage": "https://github.com/bmblby/wifiOnIce#readme"
+  "homepage": "https://github.com/glncstgl/NYCollision#readme"
 }
