--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "d3": "^5.4.0",
     "express": "^4.16.3",
     "leaflet": "^1.3.1",
