--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "body-parser": "^1.18.3",
     "d3": "^5.4.0",
     "express": "^4.16.3",
@@ -18,6 +19,7 @@
     "npm": "^6.1.0",
     "pg-promise": "^8.4.4",
     "source-map-loader": "^0.2.3",
+    "turf": "^3.0.14",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
   },
