--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "@turf/turf": "^5.1.6",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
     "d3": "^5.4.0",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
     "npm": "^6.1.0",
     "pg-promise": "^8.4.4",
+    "popper.js": "^1.14.3",
     "source-map-loader": "^0.2.3",
-    "turf": "^3.0.14",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
   },
@@ -28,10 +30,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
-    "node-sass": "^4.9.0",
     "npm-update-all": "^1.0.1",
-    "popper.js": "^1.14.3",
-    "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack-dev-server": "^3.1.4",
     "write-file-webpack-plugin": "^4.3.2"
